syntax = "proto3";

option go_package = "github.com/highhi/sandbox-grpc-go-node/app/pb";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
